Fixed background-image not showing on Index.html

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -38,7 +38,7 @@ li {
   width: 100%;
 }
 .header {
-  background-image: url(images/banenr4.jpg);
+  background-image: url(../images/banenr4.jpg);
   height: 90vh;
   background-size: cover;
   background-repeat: no-repeat;
